# gtalkbot

./: build.sh  config.h
etc/: plugins.conf
libstrophe/: Makefile.am
plugins/: dict.pl  google.py  weather.py
src/: Makefile  handler.c  handler.h  log.c  log.h  main.c  plugin.c  plugin.h  settings.c  settings.h
